--- a/app/views/public/confirmations/show.html.erb
+++ b/app/views/public/confirmations/show.html.erb
@@ -2,15 +2,21 @@
 
 <table>
     <tr>
-        <td>氏名</td>
+        <td>名前</td>
         <td>
             <%= @customer.last_name %> <%= @customer.first_name %>
         </td>
    </tr>
    <tr>
-       <td>カナ</td>
+       <td>フリガナ</td>
        <td>
            <%= @customer.last_name_kana %> <%= @customer.first_name_kana %>
+        </td>
+   </tr>
+   <tr>
+       <td>メールアドレス</td>
+       <td>
+           <%= @customer.email %>
         </td>
    </tr>
    <tr>
@@ -29,12 +35,6 @@
        <td>電話番号</td>
        <td>
            <%= @customer.phone_number %>
-           </td>
-   </tr>
-   <tr>
-       <td>メールアドレス</td>
-       <td>
-           <%= @customer.email %>
         </td>
    </tr>
   </table>
