--- a/app/views/public/customers/unsubscribe.html.erb
+++ b/app/views/public/customers/unsubscribe.html.erb
@@ -2,8 +2,8 @@
 <p>
     退会すると、会員登録情報や</br>
     これまでの購入履歴が閲覧できなくなります。</br>
-    退会する場合は、「退会する」をクリックしてください
+    退会する場合は、「退会する」をクリックしてください。
 </p>
 
-<%= link_to "退会しない", customers_my_page_path%>
+<%= link_to "退会しない", customers_path%>
 <%= link_to "退会する", withdrawal_path, method: :patch, data: { confilm: "本当に退会しますか？" } %>
