--- a/app/views/public/registrations/new.html.erb
+++ b/app/views/public/registrations/new.html.erb
@@ -1,8 +1,9 @@
+<div>
+  <%= flash[:notice] %>
+</div>
 <h2>新規会員登録</h2>
-
-<%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
+<%= form_with model: @customer, url: customer_registration_path do |f| %>
 <%= render "public/shared/error_messages", resource: resource %>
-
 <table>
   <tr>
     <td>
@@ -62,7 +63,7 @@
        </tr>
        
        <tr>
-         <td><%= f.label "パスワード" %>
+         <td><%= f.label "パスワード(6文字以上)" %>
          <p><%= f.password_field :password %></p>
          </td>
        </tr>
@@ -72,7 +73,7 @@
            <p> <%= f.label "パスワード(確認用)" %></p>
         </td>
         <td>
-          <p style="padding-left: 276px;"><%= f.password_field :password_confirmation, autocomplete: "new-password" %></p>
+          <p><%= f.password_field :password_confirmation, autocomplete: "new-password" %></p>
         </td>
        </tr>
        
@@ -80,12 +81,10 @@
          <td>
             <%= f.submit "新規登録" %>
          </td>
-          <% end %>
-          <td>
-            <p>既に登録済みの方</p>
-            <br>
-            <%= render "public/shared/links" %>からログインしてください。
-          </td>
-         </tr>
-      </table>
+        </tr>
+    </table>
 <% end %>
+
+<p>既に登録済みの方</p>
+<br>
+<%= link_to "こちら", new_customer_session_path %>からログインしてください。
