--- a/app/views/public/items/index.html.erb
+++ b/app/views/public/items/index.html.erb
@@ -24,7 +24,7 @@
         <% end %>
       </div>
       <div id="paginate-warpper">
-        <%= paginate @items, theme: 'twitter-bootstrap-4' %>
+        <%= paginate @items %>
       </div>
     </div>
   </div>
