--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -9,7 +9,7 @@
         <ul class="navbar-nav ml-auto">
         <% if customer_signed_in? %>
           <li class="mr-3">
-            <%= link_to "マイページ", customers_my_page_path,class: 'nav-link text-light' %>
+            <%= link_to "マイページ", customer_path,class: 'nav-link text-light' %>
           </li>
           <li class="mr-3">
             <%= link_to "商品一覧", items_path,class: 'nav-link text-light' %>
