--- a/app/views/public/customers/show.html.erb
+++ b/app/views/public/customers/show.html.erb
@@ -25,7 +25,7 @@
    <tr>
        <td>郵便番号</td>
        <td>
-           <%= @customer.post_code %>
+           <%= @customer.postal_code %>
         </td>
    </tr>
    <tr>
@@ -37,13 +37,13 @@
    <tr>
        <td>電話番号</td>
        <td>
-           <%= @customer.phone_number %>
+           <%= @customer.telephone_number %>
         </td>
    </tr>
   </table>
   
   <h2>配送先　</h2>
-  <div><%= link_to "一覧を見る",   deliveries_path %></div>
+  <div><%= link_to "一覧を見る",   addresses_path %></div>
   
   <h2>注文履歴</h2>
   <div><%= link_to "一覧を見る",  orders_path %></div>
