--- a/app/views/public/addresses/_new.html.erb
+++ b/app/views/public/addresses/_new.html.erb
@@ -1,4 +1,4 @@
-<%= form_with url: public_addresses_path, model: address do |f| %>
+<%= form_with url: addresses_path, model: address do |f| %>
   <div class="form-group ml-4">
     <%= f.label :postal_code, '郵便番号(ハイフンなし)' %>
     <%= f.text_field :postal_code, class:"from-control ml-3" %>
