--- a/app/views/public/addresses/index.html.erb
+++ b/app/views/public/addresses/index.html.erb
@@ -33,14 +33,14 @@
     <td class="table-active"></td>
    </tr>
    
-   <% @addresses.each do |delivery| %>       
+   <% @addresses.each do |address| %>       
    <tr>
-    <td><%= address.post_code %></td>
+    <td><%= address.postal_code %></td>
     <td><%= address.address %></td>
     <td><%= address.name %></td>
     <td>
-     <%= link_to "編集する", edit_public_address_path(address), class: 'btn btn-sm btn-success' %>
-     <%= link_to "削除する", public_address_path(address.id), method: :delete, data: { confirm: '本当に消しますか？' }, class: 'btn btn-sm btn-danger' %>
+     <%= link_to "編集する", edit_address_path(address), class: 'btn btn-sm btn-success' %>
+     <%= link_to "削除する", address_path(address.id), method: :delete, data: { confirm: '本当に消しますか？' }, class: 'btn btn-sm btn-danger' %>
     </td>
    </tr>
    <% end %>
