--- a/app/views/public/customers/unsubscribe.html.erb
+++ b/app/views/public/customers/unsubscribe.html.erb
@@ -1,9 +1,15 @@
-<h2>本当に退会しますか？</h2>
-<p>
-    退会すると、会員登録情報や</br>
-    これまでの購入履歴が閲覧できなくなります。</br>
-    退会する場合は、「退会する」をクリックしてください。
-</p>
-
-<%= link_to "退会しない", customers_path%>
-<%= link_to "退会する", withdrawal_path, method: :patch, data: { confilm: "本当に退会しますか？" } %>
+<div class="container">
+  <div class="row no-gutters">
+    <div class="col-md-9 mx-sm-auto text-center shadow-lg">
+        <h2>本当に退会しますか？</h2>
+        <p>
+            退会すると、会員登録情報や</br>
+            これまでの購入履歴が閲覧できなくなります。</br>
+            退会する場合は、「退会する」をクリックしてください。
+        </p>
+        
+        <%= link_to "退会しない", customer_path%>
+        <%= link_to "退会する", withdrawal_path, method: :patch, data: { confilm: "本当に退会しますか？" } %>
+    </div>
+  </div>
+</div>
