--- a/app/views/public/customers/show.html.erb
+++ b/app/views/public/customers/show.html.erb
@@ -44,7 +44,7 @@
                 </td>
            </tr>
            <tr>
-               <td><%= link_to "編集する",  edit_customer_path %></td>
+               <td><%= link_to "編集する",  edit_customer_path(@customer) %></td>
            </tr>
           </table>
           
