--- a/app/views/admin/items/index.html.erb
+++ b/app/views/admin/items/index.html.erb
@@ -4,9 +4,9 @@
       <h3><span class="bg-light bg-gradient">商品一覧</span></h3>
     </div>
     <div class="col-2 ml-auto">
-      <%= link_to "+", new_admin_product_path, class: "btn-{btn-light}.rounded-circle.p-0 shadow-sm" %>
+      <%= link_to " + ", new_admin_item_path, class: "btn btn-secondary rounded-circle p-0" %>
     </div>
-            
+
             <table class='table table-hover table-inverse'>
               <thead>
                 <tr class="bg-light">
@@ -14,7 +14,7 @@
                     <th>商品名</th>
                     <th>税抜価格</th>
                     <th>ジャンル</th>
-                    <th>ステータス</th> 
+                    <th>ステータス</th>
                 </tr>
             </thead>
             <tbody>
@@ -25,7 +25,7 @@
                       <td><%= item.price %></td>
                       <td><%= item.genre.name %></td>
                       <td>
-                      <if item.is_active == true %>
+                      <%if item.is_active == true %>
                         <strong class="text-success">販売中</strong>
                         <% else %>
                         <strong class="text-muted">販売停止中</strong>
