--- a/app/views/admin/items/new.html.erb
+++ b/app/views/admin/items/new.html.erb
@@ -4,6 +4,16 @@
         <h3 class="mb-5 col-8 d-flex justify-content-center"><span>商品新規登録</span></h3>
 
                 <%= form_with model: @item, url: admin_items_path, method: :post, local:true do |f| %>
+                <% if @item.errors.any? %>
+                  <div id="error_explanation">
+                    <h3><%= pluralize(@item.errors.count, "error") %> prohibited this obj from being saved:</h3>
+                    <ul>
+                      <% @item.errors.full_messages.each do |message| %>
+                        <li><%= message %></li>
+                      <% end %>
+                    </ul>
+                  </div>
+                <% end %>
           <div class="w-50 mx-auto">
               <dl class="row">
                 <dt class="col-4"><%= f.label :image, "商品画像", class: "text-right" %></dt>
@@ -13,15 +23,16 @@
                 <dd class="col-8 mt-3"><%= f.text_field :name, class: "form-control name", placeholder: "商品名" %></dd>
 
                 <dt class="col-4 mt-3"><%= f.label :introduction, "商品説明", class: "text-right" %></dt>
-                <dd class="col-8 mt-3"><%= f.text_area :introduction, class: "form-control information", placeholder: "ここに説明文を記述します" %></dd>
+                <dd class="col-8 mt-3"><%= f.text_area :introduction, class: "form-control introduction", placeholder: "ここに説明文を記述します" %></dd>
 
                 <dt class="col-4 mt-3"><%= f.label :genre_id, "ジャンル", class: "text-right" %></dt>
                 <dd class="col-8 mt-3"><%= f.collection_select :genre_id, Genre.all, :id, :name, include_blank: "--選択してください--" %></dd>
 
                 <dt class="col-4 mt-3"><%= f.label :price, "税抜価格", class: "text-right" %></dt>
-                <dd class="col-8 mt-3 input-group d-flex align-items-end"><%= f.text_field :price, class: "form-control price", placeholder: "10" %>円</dd>
+                <dd class="col-8 mt-3 input-group d-flex align-items-end"><%= f.text_field :price, class: "form-control price", placeholder: "1000" %>円</dd>
 
                 <dt class="col-4 mt-3"><label class="text-right">販売ステータス</label></dt>
+
                 <dd class="col-8 mt-3">
                   <%= f.radio_button :is_active, :true %>
                   <%= f.label :is_active, "販売中", value: "true", class: "mr-5" %>
