--- a/app/views/public/homes/about.html.erb
+++ b/app/views/public/homes/about.html.erb
@@ -1,1 +1,15 @@
-<h1>Aboutページ</h1>
+<div class="container px-5 mx-auto-0">
+  <div class="row">
+    <div class="px-5 mx-auto-0">
+        <h1 class="text-center">About</h1>
+        <p class="text-center">
+          ながのCAKEは全国発送可能なケーキ屋さんです。</br>
+          お子様からお年寄りの方までお召し上がりいただけるよう、</br>
+          様々なバリエーションをご用意しております。</br>
+          また、全国へ発送可能ですので「いつ」でも「どこ」でもご注文いただけんす。</br>
+          ぜひご注文ください。
+        </p>
+        <%= image_tag 'eclair-3366430_960_720.jpg', size:"750×750" %>
+    </div>
+  </div>
+</div>
