--- a/app/views/public/registrations/new.html.erb
+++ b/app/views/public/registrations/new.html.erb
@@ -43,7 +43,7 @@
               <p><%= f.label "郵便番号(ハイフンなし)" %></p>
             </td>
             <td>
-              <p><%= f.text_field :post_code, autofocus: true, autocomplete: "postal_code",placeholder: "0000000" %></p>
+              <p><%= f.text_field :postal_code, autofocus: true, autocomplete: "postal_code",placeholder: "0000000" %></p>
             </td>
            </tr>
            
@@ -61,7 +61,7 @@
                <p><%= f.label "電話番号(ハイフンなし)" %></p>
               </td>
                 <td>
-                  <p><%= f.text_field :phone_number, autofocus: true, autocomplete: "telephone_number",placeholder: "0000000000" %></p>
+                  <p><%= f.text_field :telephone_number, autofocus: true, autocomplete: "telephone_number",placeholder: "0000000000" %></p>
                 </td>
            </tr>
            
