--- a/app/views/admin/items/index.html.erb
+++ b/app/views/admin/items/index.html.erb
@@ -4,7 +4,7 @@
       <h3><span class="bg-light bg-gradient">商品一覧</span></h3>
     </div>
     <div class="col-2 ml-auto">
-      <%= link_to " + ", new_admin_item_path, class: "btn btn-secondary rounded-circle p-0" %>
+      <%= link_to " + ", new_admin_item_path, class: "btn btn-light rounded-circle" %>
     </div>
 
             <table class='table table-hover table-inverse'>
