--- a/app/views/admin/customers/show.html.erb
+++ b/app/views/admin/customers/show.html.erb
@@ -32,7 +32,7 @@
    <tr>
     <td>郵便番号</td>
     <td>
-     <%= @customer.post_code %>
+     <%= @customer.postal_code %>
     </td>
    </tr>
    <tr>
@@ -44,7 +44,7 @@
    <tr>
     <td>電話番号</td>
     <td>
-     <%= @customer.phone_number %>
+     <%= @customer.telephone_number %>
     </td>
    </tr>
    <tr>
@@ -64,7 +64,7 @@
    <tr>
     <td></td>
     <td><%= link_to "編集する", edit_admin_customer_path(@customer.id), class: 'btn btn-success' %></td>
-    <td><%= link_to "注文履歴一覧を見る", admin_path, class: 'btn btn-primary' %></td>
+    <td><%= link_to "注文履歴一覧を見る", admin_order_path, class: 'btn btn-primary' %></td>
    </tr>
    </table>
   </div>
