--- a/app/views/admin/homes/top.html.erb
+++ b/app/views/admin/homes/top.html.erb
@@ -21,8 +21,8 @@
                   <%= l order.created_at %>
                   <% end %>
                 </td>
-                <td><%= order.customer.full_name %></td>
-                <td><%= order.order_item.sum(:amount) %></td>
+                <td><%= order.customer.add_full_name %></td>
+                <td><%= order.order_details.sum(:amount) %></td>
                 <td><%= order.status %></td>
               </tr>
             <% end %>
