--- a/app/views/admin/orders/show.html.erb
+++ b/app/views/admin/orders/show.html.erb
@@ -8,7 +8,7 @@
         <div class="col-sm-12 col-md-8 col-lg-5 px-5 px-sm-0">
             <p>購入者</p><p><%= link_to @order.name, admin_customer_path(@order.customer) %></p>
             <p>注文日</p><p><%= @order.created_at%></p>
-            <p>配送先</p><p>〒<%= @order.post_code%> <%= @order.address%></p>
+            <p>配送先</p><p>〒<%= @order.postal_code%> <%= @order.address%></p>
             <p>支払方法</p><p><%= @order.payment_method_i18n %></p>
            <%= form_with model: @order, url: admin_order_path, method: :patch do |f| %>
            <%= f.select :status, Order.statuses_i18n.keys.map { |k| [I18n.t("enums.order.status.#{k}"), k] } %>
@@ -50,7 +50,7 @@
         <div class="col-sm-12 col-md-8 col-lg-5 px-5 px-sm-0">
         <strong>商品合計</strong>　<%= @total %>円
         <br>
-        <strong>送料</strong>　<%= @order.postage %>円
+        <strong>送料</strong>　<%= @order.shipping_cost %>円
         <br>
         <strong>請求金額合計</strong>　<%= @order.total_payment %>円
         </div>
