--- a/app/views/public/items/show.html.erb
+++ b/app/views/public/items/show.html.erb
@@ -5,7 +5,7 @@
     </div>
     <div class="col-md-8">
       <div class="d-flex">
-        <%= image_tag @item.get_image(300,300) %>
+        <%= image_tag @item.get_image, size:'300x200' %>
         <div class="ml-4 pl-4">
           <h3 class="font-weight-bold mb-3"><%= @item.name%></h3>
           <div class="d-flex flex-column justify-content-between h-75">
