--- a/app/views/admin/items/show.html.erb
+++ b/app/views/admin/items/show.html.erb
@@ -4,7 +4,7 @@
   </div>
   <div class="row">
     <div class="col-md-4">
-      <%= image_tag @item.get_image(300,200) %>
+      <%= image_tag @item.get_image, size:'300x200' %>
     </div>
     <div class="col-md-8">
       <div class="form-group row">
