--- a/app/views/admin/homes/top.html.erb
+++ b/app/views/admin/homes/top.html.erb
@@ -23,7 +23,7 @@
                 </td>
                 <td><%= order.customer.add_full_name %></td>
                 <td><%= order.order_details.sum(:amount) %></td>
-                <td><%= order.status %></td>
+                <td><%= order.status_i18n %></td>
               </tr>
             <% end %>
           </tbody>
