--- a/app/views/public/orders/comfirm.html.erb
+++ b/app/views/public/orders/comfirm.html.erb
@@ -49,7 +49,7 @@
 </div>
 <div>
     <%= form_with model: @order, url:orders_path,method: :post do |f|%>
-     <%= f.hidden_field :post_code %>
+     <%= f.hidden_field :postal_code %>
      <%= f.hidden_field :address %>
      <%= f.hidden_field :name %>
      <%= f.hidden_field :postage %>
