--- a/app/views/public/orders/show.html.erb
+++ b/app/views/public/orders/show.html.erb
@@ -7,7 +7,7 @@
     <tr>
         <th>配送先</th>
       	<th>
-      	    <%= @order.post_code %>
+      	    <%= @order.postal_code %>
             <%= @order.address %>
             <%= @order.name %>
         </th>
@@ -25,11 +25,11 @@
 <table>
     <tr>
         <th>商品合計</th>
-        <th><%= (@order.total_payment - @order.postage).to_s(:delimited) %></th>
+        <th><%= @total %>.to_s(:delimited) %></th>
     </tr>
     <tr>
         <th>配送料</th>
-        <th><%= @order.postage.to_s(:delimited) %></th>
+        <th><%= @order.shipping_cost.to_s(:delimited) %></th>
     </tr>
     <tr>
         <th>ご請求金額</th>
@@ -50,7 +50,7 @@
         <% @order.order_items.each do |order_item| %>
         <tr>
             <td>
-              <%= image_tag order_item.item.get_image(80) %>
+              <%= image_tag order_item.item.get_image, size:'50x50' %>
               <%= order_item.item.name %>
             </td>
             <td>
