--- a/app/views/public/customers/show.html.erb
+++ b/app/views/public/customers/show.html.erb
@@ -45,18 +45,18 @@
           </div>
           
           <div class="row no-gutters">
-              <div>
+              <div class="col-lg-4">
                   <h3>配送先</h3>
              </div>
-             <div class="mt-6 offset-md-1">
+             <div class="col-lg-2">
                  <%= link_to "一覧を見る",    addresses_path, class: 'btn btn-primary' %>
              </div>
           </div>
           <div class="row no-gutters">
-              <div>
-                  <h3>注文履歴</h3>
+              <div class="col-lg-4">
+                  <h3 >注文履歴</h3>
              </div>
-             <div class="mt-6 offset-md-1">
+             <div class="col-lg-2">
                  <%= link_to "一覧を見る",  orders_path, class: 'btn btn-primary' %>
              </div>
           </div>
