--- a/app/views/public/orders/index.html.erb
+++ b/app/views/public/orders/index.html.erb
@@ -18,16 +18,16 @@
               <%= order.created_at.strftime('%Y/%m/%d') %>
             </td>
             <td>
-              <%= order.post_code %>
+              <%= order.postal_code %>
               <%= order.address %>
               <%= order.name %>
             </td>
             <td>
-              <% order.order_items.each do |oi|%>
-                <%= oi.item.name  %>
+              <% @carts.each do |cart| %>
+              <%= cart.item.name %>
               <% end %>
             </td>
-            <td><%= order.total_payment.to_s(:delimited) %>円</td>
+            <td><%= order.shipping_cost + order.total_payment %>円</td>
             <td><%= order.status_i18n %></td>
             <td><%= link_to '表示する', order_path(order.id) %></td>
        </tr>
