--- a/app/views/public/orders/new.html.erb
+++ b/app/views/public/orders/new.html.erb
@@ -1,60 +1,68 @@
-<% if @order.errors.any? %>
-  <div id="error_explanation">
-    <h3><%= pluralize(@order.errors.count, "error") %> prohibited this obj from being saved:</h3>
-    <ul>
-      <% @order.errors.full_messages.each do |message| %>
-        <li><%= message %></li>
+<div class="container p-3">
+  <div class="row p-3">
+    <div class="mx-auto">
+
+      <h2 style="background-color: #EEE; text-align: center; ">注文情報入力</h2>
+      <% if @order.errors.any? %>
+        <div id="error_explanation">
+          <h3><%= pluralize(@order.errors.count, "error") %> prohibited this obj from being saved:</h3>
+          <ul>
+            <% @order.errors.full_messages.each do |message| %>
+              <li><%= message %></li>
+            <% end %>
+          </ul>
+        </div>
       <% end %>
-    </ul>
+
+      <%= form_with model: @order, url: comfirm_path do |f| %>
+      <h4>お支払い方法</h4>
+      
+      <div>
+          <%= f.collection_radio_buttons( :payment_method, Order.payment_methods_i18n, :first, :last) do |b| %>
+          <%= b.radio_button({ class: "form-input-check", required: true}) %>
+          <%= b.label({ class: "form-check-label"}) %><br/>
+          <% end %>
+      </div>
+      
+      <h4>お届け先</h4>
+      <div>
+          <%= f.radio_button :option, 0, {checked: "checked", class: "form-input-check"} %>
+          <%= f.label :option_0, "ご自身の住所"%><br/>
+          <div>
+          <%= current_customer.address %><br/>
+          <%= current_customer.add_full_name %>
+          </div>
+      </div>
+      <div>
+          <%= f.radio_button :option, 1,{class: "from-input-check"} %>
+          <%= f.label :option_1, "登録済住所から選択"%><br>
+          <div>
+            <% if @addresses.nil? %>
+              <p>住所が登録されていません。</p>
+            <% else %>
+              <%= f.select :address_id, @addresses.map { |k| [t("#{k.join_address_name}"), k.id] },
+               { include_blank: "選択してください" }, class: "form-control" %>
+            <% end %>
+          </div>
+      </div>
+      <div>
+          <%= f.radio_button :option, 2, {class: "from-input-check"} %>
+          <%= f.label :option_2, "新しいお届け先" %>
+      <div>
+          <%= f.label :other_post_code, "郵便番号(ハイフンなし)" %>
+          <%= f.text_field :other_post_code %>
+      </div>
+      <div>
+          <%= f.label :other_address, "住所" %>
+          <%= f.text_field :other_address %>
+      </div>
+      <div class="form-inline ml-4 mt-3 name-group">
+          <%= f.label :other_name, "宛名" %>
+          <%= f.text_field :other_name %>
+      </div>
+      
+      <%= f.submit "確認画面へ進む", class: 'btn btn-success'%>
+      <% end %>
+    </div>
   </div>
-<% end %>
-<h2>注文情報入力</h2>
-<%= form_with model: @order, url: comfirm_path do |f| %>
-<h4>お支払い方法</h4>
-
-<div>
-    <%= f.collection_radio_buttons( :payment_method, Order.payment_methods_i18n, :first, :last) do |b| %>
-    <%= b.radio_button({ class: "form-input-check", required: true}) %>
-    <%= b.label({ class: "form-check-label"}) %><br/>
-    <% end %>
 </div>
-
-<h4>お届け先</h4>
-<div>
-    <%= f.radio_button :option, 0, {checked: "checked", class: "form-input-check"} %>
-    <%= f.label :option_0, "ご自身の住所"%><br/>
-    <div>
-    <%= current_customer.address %><br/>
-    <%= current_customer.add_full_name %>
-    </div>
-</div>
-<div>
-    <%= f.radio_button :option, 1,{class: "from-input-check"} %>
-    <%= f.label :option_1, "登録済住所から選択"%><br>
-    <div>
-      <% if @addresses.nil? %>
-        <p>住所が登録されていません。</p>
-      <% else %>
-        <%= f.select :address_id, @addresses.map { |k| [t("#{k.join_address_name}"), k.id] },
-         { include_blank: "選択してください" }, class: "form-control" %>
-      <% end %>
-    </div>
-</div>
-<div>
-    <%= f.radio_button :option, 2, {class: "from-input-check"} %>
-    <%= f.label :option_2, "新しいお届け先" %>
-<div>
-    <%= f.label :other_post_code, "郵便番号(ハイフンなし)" %>
-    <%= f.text_field :other_post_code %>
-</div>
-<div>
-    <%= f.label :other_address, "住所" %>
-    <%= f.text_field :other_address %>
-</div>
-<div class="form-inline ml-4 mt-3 name-group">
-    <%= f.label :other_name, "宛名" %>
-    <%= f.text_field :other_name %>
-</div>
-
-<%= f.submit "確認画面へ進む"%>
-<% end %>
