--- a/app/views/public/orders/comfirm.html.erb
+++ b/app/views/public/orders/comfirm.html.erb
@@ -34,7 +34,7 @@
     </tr>
     <tr>
         <th>請求金額</th>
-        <th><%= @order.shipping_cost + @total %></th>
+        <th><%= @order.total_payment %></th>
     </tr>
 </table>
 <div>
