--- a/app/views/public/orders/comfirm.html.erb
+++ b/app/views/public/orders/comfirm.html.erb
@@ -59,7 +59,7 @@
                  <%= f.hidden_field :address %>
                  <%= f.hidden_field :name %>
                  <%= f.hidden_field :shipping_cost %>
-                 <%= f.hidden_field :total_payment,:value => @total %>
+                 <%= f.hidden_field :total_payment,:value => @total+@order.shipping_cost %>
                  <%= f.hidden_field :payment_method %>
                  <%= f.submit "注文を確定する", class: 'btn btn-success' %>
                 <% end %>
