--- a/app/views/public/orders/index.html.erb
+++ b/app/views/public/orders/index.html.erb
@@ -27,11 +27,11 @@
                       <%= order.name %>
                     </td>
                     <td>
-                      <% @carts.each do |cart| %>
-                      <%= cart.item.name %>
+                      <% order.order_details.each do |order_detail| %>
+                      <%= order_detail.item.name %>
                       <% end %>
                     </td>
-                    <td><%= order.shipping_cost + order.total_payment %>円</td>
+                    <td><%= order.total_payment %>円</td>
                     <td><%= order.status_i18n %></td>
                     <td><%= link_to '表示する', order_path(order.id) %></td>
                </tr>
