--- a/app/views/public/orders/show.html.erb
+++ b/app/views/public/orders/show.html.erb
@@ -4,13 +4,13 @@
         <h3 style="background-color: #EEE; text-align: center; ">注文履歴</h3>
          <table>
              <tr>
-                 <th >注文日</th>
+                 <th>注文日</th>
               	 <th><%= @order.created_at.strftime('%Y/%m/%d') %></th>
             </tr>
             <tr>
                 <th>配送先</th>
               	<th>
-              	    <%= @order.postal_code %>
+              	    〒<%= @order.postal_code %>
                     <%= @order.address %>
                     <%= @order.name %>
                 </th>
@@ -24,22 +24,22 @@
             </tr>
         </table>
         
-        <h3>注文詳細</h3>
+        <h3 style="background-color: #EEE; text-align: center; ">注文詳細</h3>
         <table>
             <tr>
                 <th>商品合計</th>
-                <th><%= @total.to_s(:delimited) %></th>
+                <th><%= @total.to_s(:delimited) %>円</th>
             </tr>
             <tr>
                 <th>配送料</th>
-                <th><%= @order.shipping_cost.to_s(:delimited) %></th>
+                <th><%= @order.shipping_cost.to_s(:delimited) %>円</th>
             </tr>
             <tr>
                 <th>ご請求金額</th>
-              	<th><%= @order.total_payment.to_s(:delimited) %></th>
+              	<th><%= @order.total_payment %>円</th>
             </tr>
         </table>
-        <h3>注文商品詳細</h3>
+        <h3 style="background-color: #EEE; text-align: center; ">注文商品詳細</h3>
         <table>
             <thead>
                 <tr>
@@ -50,19 +50,17 @@
                 </tr>
             </thead>
             <tbody>
-                <% @carts.each do |cart| %>
+                <%  @order_details.each do |order_detail| %>
                 <tr>
                     <td>
-                      <%= image_tag cart.item.get_image, size:'50x50'%>
-                      <%= cartl.item.name %>
+                      <%= image_tag order_detail.item.get_image, size:'50x50'%>
+                      <%= order_detail.item.name %>
                     </td>
                     <td>
-                      <%= cart.item.add_tax_price %>
-                    </td>
-                    <td><%= art.item.amount %></td>
+                      <%= order_detail.item.add_tax_price %>円</td>
+                    <td><%= order_detail.amount %>個</td>
                     <td >
-                      <%= cart.add_total_payment_all %>
-                    </td>
+                      <%= order_detail.add_total_payment_all %>円</td>
                 </tr>
                 <% end %>
             </tbody>
