--- a/app/views/public/orders/comfirm.html.erb
+++ b/app/views/public/orders/comfirm.html.erb
@@ -18,9 +18,9 @@
                             <%= image_tag cart.item.get_image, size:'50x50'%>
                             <%= cart.item.name %>
                         </td>
-                        <td><%= cart.item.add_tax_price %></td>
-                        <td><%= cart.amount %></td>
-                        <td><%= cart.add_total_payment_all %></td>
+                        <td><%= cart.item.add_tax_price %>円</td>
+                        <td><%= cart.amount %>個</td>
+                        <td><%= cart.add_total_payment_all %>円</td>
                     </tr>
                     <% end %>
                 </tbody>
@@ -31,15 +31,15 @@
 
                 <tr>
                     <th>送料</th>
-                    <th><%= @order.shipping_cost.to_s(:delimited) %></th>
+                    <th><%= @order.shipping_cost.to_s(:delimited) %>円</th>
                 </tr>
                 <tr>
                     <th>商品合計</th>
-                    <th><%= @total %></th>
+                    <th><%= @total %>円</th>
                 </tr>
                 <tr>
                     <th>請求金額</th>
-                    <th><%= @order.shipping_cost + @total %></th>
+                    <th><%= @order.shipping_cost + @total %>円</th>
                 </tr>
             </table>
        </div>
@@ -51,7 +51,7 @@
             
             <div class="col-md-10">
                 <p>お届け先</p>
-                <p><%= @order.add_full_address %><br/>
+                <p>〒<%= @order.add_full_address %><br/>
                    <%= @order.name %></p>
             </div>
             <div>
