--- a/app/views/public/orders/new.html.erb
+++ b/app/views/public/orders/new.html.erb
@@ -29,6 +29,7 @@
           <%= f.radio_button :option, 0, {checked: "checked", class: "form-input-check"} %>
           <%= f.label :option_0, "ご自身の住所"%><br/>
           <div>
+          〒<%= current_customer.postal_code %>
           <%= current_customer.address %><br/>
           <%= current_customer.add_full_name %>
           </div>
