不具合の修正

--- a/app/views/admin/orders/show.html.erb
+++ b/app/views/admin/orders/show.html.erb
@@ -30,7 +30,7 @@
                <% @order_details.each do |order_detail| %>
                 <tr>
                  <td><%= order_detail.item.name %></td>
-                 <td><%= (order_detail.price*1.08).ceil.to_s(:delimited) %></td>
+                 <td><%= (order_detail.price*1.1).round.to_s(:delimited) %></td>
                  <td><%= order_detail.amount %></td>
                  <td><%= (order_detail.price*order_detail.amount).to_s(:delimited) %></td>
                  <td>
