--- a/app/views/public/orders/show.html.erb
+++ b/app/views/public/orders/show.html.erb
@@ -54,12 +54,12 @@
                 <tr>
                     <td>
                       <%= image_tag cart.item.get_image, size:'50x50'%>
-                      <%= cartl.item.name %>
+                      <%= cart.item.name %>
                     </td>
                     <td>
                       <%= cart.item.add_tax_price %>
                     </td>
-                    <td><%= art.item.amount %></td>
+                    <td><%= cart.item.amount %></td>
                     <td >
                       <%= cart.add_total_payment_all %>
                     </td>
