--- a/app/views/public/homes/about.html.erb
+++ b/app/views/public/homes/about.html.erb
@@ -6,7 +6,7 @@
           ながのCAKEは全国発送可能なケーキ屋さんです。</br>
           お子様からお年寄りの方までお召し上がりいただけるよう、</br>
           様々なバリエーションをご用意しております。</br>
-          また、全国へ発送可能ですので「いつ」でも「どこ」でもご注文いただけんす。</br>
+          また、全国へ発送可能ですので「いつ」でも「どこ」でもご注文いただけます。</br>
           ぜひご注文ください。
         </p>
         <%= image_tag 'eclair-3366430_960_720.jpg', size:"750×750" %>
