--- a/app/views/public/items/index.html.erb
+++ b/app/views/public/items/index.html.erb
@@ -10,15 +10,15 @@
           <div class="card m-2 text-center card-warpper">
             <%= link_to item_path(item.id) do %>
               <%= image_tag item.get_image, size:'300x200', class:"card-image-top" %>
-            <% unless item.is_active %>
-              <div class="not-sale">
-                <p>販売停止</p>
+              <% unless item.is_active %>
+                <div class="not-sale">
+                  <p>販売停止</p>
+                </div>
+              <% end %>
+              <div class="card-body text-dark py-2 font-weight-bold">
+                <%= link_to item.name, item_path(item.id), class: "card-title mb-2" %>
+                <p class="card-subtitle"><%= to_total_currency(item.price) %></p>
               </div>
-            <% end %>
-            <div class="card-body text-dark py-2 font-weight-bold">
-              <p class="card-title mb-2"><%= item.name %></p>
-              <p class="card-subtitle"><%= to_total_currency(item.price) %></p>
-            </div>
             <% end %>
           </div>
         <% end %>
