注文関係の修正

--- a/app/views/admin/orders/show.html.erb
+++ b/app/views/admin/orders/show.html.erb
@@ -6,10 +6,14 @@
 <div class='container'>
     <div class='row'>
         <div class="col-sm-12 col-md-8 col-lg-5 px-5 px-sm-0">
-            <p>購入者</p><p><%= link_to @order.name, admin_customer_path(@order.customer) %></p>
-            <p>注文日</p><p><%= @order.created_at%></p>
-            <p>配送先</p><p>〒<%= @order.postal_code%> <%= @order.address%></p>
-            <p>支払方法</p><p><%= @order.payment_method_i18n %></p>
+            <strong>購入者</strong>
+            <p><%= link_to @order.add_full_name, admin_customer_path(@order.customer) %></p>
+            <strong>注文日</strong>
+            <p><%= @order.created_at%></p>
+            <strong>配送先</strong>
+            <p>〒<%= @order.postal_code%> <%= @order.address%></br><%= @order.name %></p>
+            <strong>支払方法</strong>
+            <p><%= @order.payment_method_i18n %></p>
            <%= form_with model: @order, url: admin_order_path, method: :patch do |f| %>
            <%= f.select :status, Order.statuses_i18n.invert %>
            <%= f.submit "更新", class: 'btn btn-success' %>
