--- a/app/views/public/orders/index.html.erb
+++ b/app/views/public/orders/index.html.erb
@@ -1,47 +1,47 @@
-<div class="container p-3">
-  <div class="row p-3">
-    <div class="mx-auto">
-        <h3 style="background-color: #EEE; text-align: center; ">注文履歴一覧</h3>
-        <table border="1" style="border-collapse: collapse" width="100%">
-            <% if @orders.present? %>
-            <thead>
-                <tr>
-                    <th>注文日</th>
-                    <th>配送先</th>
-                    <th>注文商品</th>
-                    <th>支払い金額</th>
-                    <th>ステータス</th>
-                    <th>注文詳細</th>
-                </tr>
-            </thead>
-            <tbody>
-               
-                <% @orders.each do |order| %>
-                <tr>
-                    <td>
-                      <%= order.created_at.strftime('%Y/%m/%d') %>
-                    </td>
-                    <td>
-                      〒<%= order.postal_code %>
-                      <%= order.address %>
-                      <%= order.name %>
-                    </td>
-                    <td>
-                      <% order.order_details.each do |order_detail| %>
-                      <%= order_detail.item.name %>
-                      <% end %>
-                    </td>
-                    <td><%= order.total_payment %>円</td>
-                    <td><%= order.status_i18n %></td>
-                    <td><%= link_to '表示する', order_path(order.id) %></td>
-               </tr>
-                    <% end %>
-                  
-            </tbody>
-        </table>
-        <% else %>
-                <h2>ご注文は存在しません</h2>
-        <% end %>
-      </div>
-    </div>
+<div class='container'>
+  <div class='row'>
+    <h3 class='m-4'>注文履歴一覧</h3>
   </div>
+  
+  <div class='row'>
+    <table class='table table-bordered'>
+        <% if @orders.present? %>
+      <thead class='table-secondary text-center'>
+          <tr>
+              <th class='col-1'>注文日</th>
+              <th class='col-3'>配送先</th>
+              <th class='col-2'>注文商品</th>
+              <th class='col-1'>支払い金額</th>
+              <th class='col-1'>ステータス</th>
+              <th class='col-1'>注文詳細</th>
+         </tr>
+     </thead>
+    <tbody>
+        <% @orders.each do |order| %>
+          <tr class='text-center'>
+              <td>
+                <%= order.created_at.strftime('%Y/%m/%d') %>
+              </td>
+              <td class='text-left'>
+                〒<%= order.postal_code %>
+                 <%= order.address %>
+                 <%= order.name %>
+              </td>
+              <td class='text-left'>
+                 <% order.order_details.each do |order_detail| %>
+                    <%= order_detail.item.name %>
+                 <% end %>
+             </td>
+              <td><%= order.total_payment %>円</td>
+              <td><%= order.status_i18n %></td>
+              <td><%= link_to '表示する', order_path(order.id),class:'btn btn-info' %></td>
+         </tr>
+        <% end %>
+                  
+    </tbody>
+  </table>
+     <% else %>
+        <h2>ご注文は存在しません</h2>
+     <% end %>
+  </div>
+</div>
