--- a/app/views/public/orders/show.html.erb
+++ b/app/views/public/orders/show.html.erb
@@ -1,72 +1,79 @@
-<div class="container p-3">
-  <div class="row p-3">
-    <div class="mx-auto">
-        <h3 style="background-color: #EEE; text-align: center; ">注文履歴</h3>
-         <table>
-             <tr>
-                 <th>注文日</th>
-              	 <th><%= @order.created_at.strftime('%Y/%m/%d') %></th>
-            </tr>
-            <tr>
-                <th>配送先</th>
-              	<th>
-              	    〒<%= @order.postal_code %>
-                    <%= @order.address %>
-                    <%= @order.name %>
-                </th>
-            </tr>
-            <tr>
-                <th>支払い方法</th>
-              	<th><%= @order.payment_method_i18n %></th>
-            </tr>
-                <th>ステーテス</th>
-                <th><%= @order.status_i18n %></th>
-            </tr>
-        </table>
-        
-        <h3 style="background-color: #EEE; text-align: center; ">注文詳細</h3>
-        <table>
-            <tr>
-                <th>商品合計</th>
-                <th><%= @total.to_s(:delimited) %>円</th>
-            </tr>
-            <tr>
-                <th>配送料</th>
-                <th><%= @order.shipping_cost.to_s(:delimited) %>円</th>
-            </tr>
-            <tr>
-                <th>ご請求金額</th>
-              	<th><%= @order.total_payment %>円</th>
-            </tr>
-        </table>
-        <h3 style="background-color: #EEE; text-align: center; ">注文商品詳細</h3>
-        <table>
-            <thead>
-                <tr>
-                    <th>商品名</th>
-                    <th>単価(税込)</th>
-                    <th>数量</th>
-                    <th>小計</th>
-                </tr>
-            </thead>
-            <tbody>
-                <%  @order_details.each do |order_detail| %>
-                <tr>
-                    <td>
-
-                      <%= image_tag order_detail.item.get_image, size:'50x50'%>
-                      <%= order_detail.item.name %>
-                    </td>
-                    <td>
-                      <%= order_detail.item.add_tax_price %>円</td>
-                    <td><%= order_detail.amount %>個</td>
-
-                  <td >
-                      <%= order_detail.add_total_payment_all %>円</td>
-                </tr>
-                <% end %>
-            </tbody>
-        </table>
+<div class='container'>
+  <div class='row'>
+    <h3 class='m-4'>注文履歴</h3>
+  </div>
+  <div class='row'>
+    <div class='col-7'>
+      <h5 class='font-weight-bolder'>注文情報</h5>
+      <table class='table table-bordered'>
+        <tr>
+          <td class='table-secondary'>注文日</td>
+          <td><%= @order.created_at.strftime('%Y/%m/%d') %></td>
+        </tr>
+        <tr>
+          <td class='table-secondary'>配送先</td>
+          <td>
+              〒<%= @order.postal_code %>
+              <%= @order.address %>
+              <%= @order.name %>
+           </td>
+        </tr>
+        <tr>
+           <td>支払い方法</td>
+            <td><%= @order.payment_method_i18n %></td>
+        </tr>
+            <td>ステーテス</td>
+            <td><%= @order.status_i18n %></td>
+        </tr>
+      </table>
     </div>
-</div>
+    
+    <div class='col-4 ml-1'>
+        <h5 class='font-weight-bolder'>注文詳細</h5>
+        <table class='table table-bordered'>
+        <tr>
+          <td class='table-secondary'>商品合計</td>
+          <td class='text-right'><%= @total.to_s(:delimited) %>円</td>
+        </tr>
+        <tr>
+            <td class='table-secondary'>送料</td>
+            <td class='text-right'><%= @order.shipping_cost.to_s(:delimited) %>円</td>
+        </tr>
+        <tr>
+            <td class='table-secondary'>ご請求金額</td>
+            <td class='text-right'><%= @order.total_payment %>円</td>
+        </tr>
+        </table>
+      </div>
+    </div>
+    
+    <div class='row flex-column ml-1'>
+    <h5 class='font-weight-bolder'>注文商品詳細</h5>
+    <table class='table table-bordered col-8 text-center'>
+      <thead class='table-secondary'>
+        <tr>
+          <th class='col-4'>商品名</th>
+          <th class='col-1'>単価(税込)</th>
+          <th class='col-1'>個数</th>
+          <th class='col-1'>小計</th>
+        </tr>
+      </thead>
+      <tbody>
+        <%  @order_details.each do |order_detail| %>
+        <tr>
+            <td>
+                <%= image_tag order_detail.item.get_image, size:'50x50'%>
+                <%= order_detail.item.name %>
+            </td>
+            <td>
+                <%= order_detail.item.add_tax_price %>円</td>
+            <td>
+                <%= order_detail.amount %>個</td>
+            <td>
+                <%= order_detail.add_total_payment_all %>円</td>
+        </tr>
+        <% end %>
+    　</tbody>
+　　</table>
+　　</div>
 </div>
