レイアウト修正

--- a/app/views/public/homes/about.html.erb
+++ b/app/views/public/homes/about.html.erb
@@ -1,15 +1,16 @@
-<div class="container px-5 mx-auto-0">
+<div class="container px-5 text-center mx-auto">
   <div class="row">
-    <div class="px-5 mx-auto-0">
-        <h1 class="text-center">About</h1>
-        <p class="text-center">
-          ながのCAKEは全国発送可能なケーキ屋さんです。</br>
-          お子様からお年寄りの方までお召し上がりいただけるよう、</br>
-          様々なバリエーションをご用意しております。</br>
-          また、全国へ発送可能ですので「いつ」でも「どこ」でもご注文いただけます。</br>
+    <div class="px-5 mx-auto ml-auto">
+        <h1 style="font-size: 6em; margin-bottom: 0.3em;">About</h1>
+        <p style="font-size: 1.5em;">
+          ながのCAKEは全国発送可能なケーキ屋さんです。<br>
+          お子様からお年寄りの方までお召し上がりいただけるよう、<br>
+          様々なバリエーションをご用意しております。<br>
+          また、全国へ発送可能ですので「いつ」でも「どこ」でもご注文いただけます。<br>
           ぜひご注文ください。
         </p>
-        <%= image_tag 'eclair-3366430_960_720.jpg', size:"750×750" %>
+        <%= image_tag 'eclair-3366430_960_720.jpg', size: "550x350" %>
     </div>
   </div>
 </div>
+
