--- a/app/views/public/homes/top.html.erb
+++ b/app/views/public/homes/top.html.erb
@@ -1,45 +1,40 @@
 <div class="container px-5 px-sm-0">
  <div class="row">
-  
   <div class="col-sm-2 mt-5">
    <%= render 'public/tmp/genre_list', genres: @genres %>
   </div>
 
   <div class="col-md-8 offset-md-1 mt-5">
-   
     <div class="row">
-      <div class="text-light">
-      　<%= image_tag 'cake-1850011_960_720', size:"750x500" %>
-        <div class="card-img-overlay">
-         <h3 class="card-title">
-          <p class="text-center">
-           ようこそ、ながのCAKEへ!</br>
-           このサイトは、ケーキ販売のECサイトになります。</br>
-           会員でない方も商品の閲覧はできますが、</br>
-           購入には会員登録が必要になります。
-          </p>
-         </h3>
+      <div class="position-relative" style="left: 120px;">
+        <%= image_tag 'cake-1850011_960_720', size:"600x350", style: "margin-bottom: -20px;" %>
+        <div class="card-img-overlay d-flex justify-content-center align-items-center">
+          <h3 class="card-title text-light text-center">
+            ようこそ、ながのCAKEへ!<br>
+            このサイトは、ケーキ販売のECサイトになります。<br>
+            会員でない方も商品の閲覧はできますが、<br>
+            購入には会員登録が必要になります。
+          </h3>
         </div>
       </div>
+    <div class="container">
+    <div class="row">
+      <div class="col-md-10 offset-md-1 mt-5">
+        <h3 style="margin-left: -150px;">新着商品</h3>
+        <table class="table table-borderless float-right">
+          <tr>
+            <% @items.each do |item| %>
+              <td>
+                <%= link_to(image_tag(item.get_image, size: '230x150', class: 'card-image-top'), item_path(item.id)) %>
+                <%= link_to item.name, item_path(item.id) %></br>
+                <%= to_total_currency(item.add_tax_price) %>
+              </td>
+            <% end %>   
+          </tr>
+        </table>     
+      </div>
     </div>
-  </div>  
-  <div class="col-sm-2 mt-5">
-    <div class="row"><h2>新着商品</h2>
-    <table class="table table-borderless">
-     <tr>
-      <% @items.each do |item| %>
-       <td>
-        <%= link_to(image_tag(item.get_image, size: '300x200', class: 'card-image-top'), item_path(item.id)) %>
-        <%= link_to item.name, item_path(item.id) %></br>
-        <%= item.price %>円
-       </td>
-      <% end %>   
-     </tr>
-    </table>
-    <p class="text-right">
-     　<%= link_to "全ての商品", items_path %>
-    </p>
-    </div>
+  <div class="text-right">
+    <%= link_to "全ての商品を見る＞", items_path %>
   </div>
- </div>
 </div>
