--- a/app/views/public/items/show.html.erb
+++ b/app/views/public/items/show.html.erb
@@ -3,16 +3,16 @@
     <div class="col-sm-2">
       <%= render 'public/tmp/genre_list', genres: @genres %>
     </div>
-    <div class="col-md-8">
-      <div class="d-flex">
+    <div class="col-md-8"  style="margin-top: 50px;">
+      <div class="d-flex" style="margin-left: 50px;">
         <%= image_tag @item.get_image, size:'300x200' %>
         <div class="ml-4 pl-4">
-          <h3 class="font-weight-bold mb-3"><%= @item.name%></h3>
+          <h3 class="font-weight-bold mb-3" style="margin-left: 50px;"><%= @item.name%></h3>
           <div class="d-flex flex-column justify-content-between h-75">
-            <p class="h5 mb-4">
+            <p class="h5 mb-4" style="margin-left: 50px;">
               <%= @item.introduction %>
             </p>
-            <p class="h4 mb-4">
+            <p class="h4 mb-4" style="margin-left: 50px;">
               <strong>
                 <%= to_total_currency(@item.add_tax_price) %>
               </strong>
@@ -23,7 +23,7 @@
       </div>
       <% if @item.is_active %>
         <% if current_customer %>
-        <div class="w-50 mt-4 mr-0 ml-auto">
+        <div class="w-50 mt-4 ml-auto text-right">
           <%= render 'public/tmp/amount', cart:@cart, item:@item %>
         </div>
         <% end %>
