管理者側の修正

--- a/app/views/admin/customers/edit.html.erb
+++ b/app/views/admin/customers/edit.html.erb
@@ -49,7 +49,7 @@
    <tr>
     <td>郵便番号</td>
     <td>
-     <%= f.text_field :post_code %>
+     <%= f.text_field :postal_code %>
     </td>
    </tr>
    <tr>
@@ -61,7 +61,7 @@
    <tr>
     <td>電話番号</td>
     <td>
-     <%= f.text_field :phone_number %>
+     <%= f.text_field :telephone_number %>
     </td>
    </tr>
    <tr>
